--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,8 +4,7 @@
 
 <section class="content">
   <section class="invoice">
-        {{ form.value | json}}
-        <form #form="ngForm" novalidate>
+        <form [formGroup]="orderForm" novalidate>
           <div class="row">
             <div class="col-xs-12">
               <h2 class="page-header">
@@ -14,27 +13,54 @@
             </div>
           </div>                
 
-          <div class="row invoice-info">
+          <div class="row">
+            <div class="col-xs-12">
+              <p class="lead">Seus dados: </p>
+            </div>
+            <div class="col-sm-6 col-xs-12">
+              <mt-input-container errorMessage=" Campo obrigatório e com 5 caracteres"
+                        label="Nome">
+                        <input class="form-control" type="text" formControlName="name" placeholder="Nome"  autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido"
+                        label="E-mail">
+                 <input type="text" class="form-control" formControlName="email"
+                        placeholder="Email" autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido"
+                        label="E-mail">
+                 <input type="text" class="form-control" formControlName="emailConfirmation"
+                        placeholder="Confirmação do e-mail" autocomplete="off">
+              </mt-input-container>
+            </div>
+          </div>
+
+          <div class="row">
             <div class="col-xs-12">
               <p class="lead">Endereço de Entrega:</p>
             </div>
             <div class="col-sm-6 col-xs-12">
               <mt-input-container errorMessage=" Campo obrigatório e com 5 caracteres"
                         label="Endereço">
-                        <input class="form-control" type="text" name="address" placeholder="Endereço" ngModel required minlength="5" autocomplete="off">
+                  <input class="form-control" type="text" formControlName="address"
+                          placeholder="Endereço" autocomplete="off">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container errorMessage=" Obrigatório e somente números"
                         label="Número">
-                 <input type="text" class="form-control" name="number" ngModel
-                        required placeholder="Número" autocomplete="off"
+                 <input type="text" class="form-control" formControlName="number"
+                        placeholder="Número" autocomplete="off"
                         pattern="^[0-9]*$">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container>
-                <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
+                <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
               </mt-input-container>
             </div>
             <!-- /.col -->
@@ -61,7 +87,7 @@
               <p class="lead">Formas de Pagamento:</p>
 
                 <div class="form-group">
-                    <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+                    <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                 </div>
 
             </div>
@@ -80,7 +106,7 @@
 
         <div class="row">
           <div class="col-xs-12">
-            <button (click)="checkOrder(form.value)" class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0">
+            <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" [disabled]="!orderForm.valid || cartItems().length === 0">
               <i class="fa fa-credit-card"></i> Concluir Pedido
             </button>
           </div>
